[metadata]
name = hdx-python-country
description = HDX Python country and exchange rate utilities
author = Michael Rans
author_email = rans@email.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = HDX, location, country, country code, iso 3166, iso2, iso3, region, currency, exchange rate
url = https://github.com/OCHA-DAP/hdx-python-country
platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = True
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.6

setup_requires =
    pytest-runner

install_requires =
    hdx-python-utilities>=3.0.3
    libhxl>=4.24.1
    pyphonetics
    exchangerates

tests_require =
    pytest
    pytest-cov
    pytest-pythonpath

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
test = pytest

